[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Abilities/Freeze.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "activate"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/FreezeArea/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.266667 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/FreezeArea/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Freeze" type="Node2D"]
script = ExtResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="FreezeTime" type="Timer" parent="Timers"]

[node name="SlowdownTimer" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.266667 )
scale = Vector2( 0.3125, 0.3125 )
texture = ExtResource( 2 )

[node name="FreezeArea" type="Area2D" parent="Sprite"]
collision_layer = 2
collision_mask = 1540

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/FreezeArea"]
scale = Vector2( 2.79167, 1 )
polygon = PoolVector2Array( 0, 0, 32, -32, 64, -64, 128, -96, 192, -128, 192, 128, 128, 96, 64, 64, 32, 32 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/activate = SubResource( 1 )
anims/idle = SubResource( 2 )

[connection signal="timeout" from="Timers/FreezeTime" to="." method="_on_FreezeTime_timeout"]
[connection signal="timeout" from="Timers/SlowdownTimer" to="." method="_on_SlowdownTimer_timeout"]
[connection signal="body_entered" from="Sprite/FreezeArea" to="." method="_on_FreezeArea_body_entered"]
[connection signal="body_exited" from="Sprite/FreezeArea" to="." method="_on_FreezeArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
